--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "name": "Һүҙ уйыны",
   "short_name": "Һүҙ уйыны",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#6aaa64",
