--- a/.github/workflows/.github/workflows/deploy-test.yml
+++ b/.github/workflows/.github/workflows/deploy-test.yml
@@ -3,32 +3,20 @@ name: Deploy Test PWA
 on:
   push:
     branches:
-      - test  # Запускаем при пуше в test-ветку
-
-permissions:
-  contents: write
+      - test  # Пушим в ветку test для деплоя
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 📥 Клонируем репозиторий
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3  # Клонируем репозиторий
 
-      - name: 🔧 Устанавливаем Node.js
-        uses: actions/setup-node@v3
+      - run: npm install  # Устанавливаем зависимости
+
+      - run: npm run build  # Собираем проект
+
+      - uses: JamesIves/github-pages-deploy-action@v4  # Деплой на GitHub Pages
         with:
-          node-version: 18
-
-      - name: 📦 Устанавливаем зависимости
-        run: npm install
-
-      - name: 🏗️ Собираем проект
-        run: npm run build
-
-      - name: 🚀 Деплоим тестовую версию
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages-test
-          folder: dist # или build, если React
-          target-folder: test # Разворачиваем в `/test/`
+          branch: main  # Деплой в ветку main 
+          folder: dist  # Папка с результатами сборки
+          target-folder: test  # Разворачиваем в /test/ на Pages
