--- a/.github/workflows/.github/workflows/deploy-test.yml
+++ b/.github/workflows/.github/workflows/deploy-test.yml
@@ -18,5 +18,5 @@ jobs:
       - uses: JamesIves/github-pages-deploy-action@v4  # Деплой на GitHub Pages
         with:
           branch: main  # Деплой в ветку main 
-          folder: dist  # Папка с результатами сборки
+          folder: .  # Папка с результатами сборки
           target-folder: test  # Разворачиваем в /test/ на Pages
