--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,25 @@
-﻿{
+{
   "name": "Һүҙ уйыны",
   "short_name": "Һүҙ уйыны",
-  "start_url": ".",
+  "id": "/",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#6aaa64",
+  "description": "Был һүҙҙәрҙе табыу буйынса мауыҡтырғыс уйын.",
   "icons": [
-      {
-          "src": "assets/icons/icon-192x192.png",
-          "sizes": "192x192",
-          "type": "image/png"
-      },
-      {
-          "src": "assets/icons/icon-512x512.png",
-          "sizes": "512x512",
-          "type": "image/png"
-      }
-  ]
+    {
+      "src": "assets/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  }
 }
