--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Һүҙ уйыны",
   "short_name": "Һүҙ уйыны",
   "id": "/",
-  "start_url": ".",
-  "scope": ".",
+  "start_url": "/bashword/",
+  "scope": "/bashword/",
   "display": "standalone",
   "display_override": ["window-controls-overlay"],
   "orientation": "portrait",
