--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "id": "/",
   "start_url": "/bashword/",
   "scope": "/bashword/",
-  "display": "standalone",
+  "display": "fullscreen",
   "display_override": ["window-controls-overlay"],
   "orientation": "portrait",
   "background_color": "#ffffff",
