--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,7 @@
   "id": "/",
   "start_url": "/bashword/",
   "scope": "/bashword/",
-  "display": "fullscreen",
-  "display_override": ["window-controls-overlay"],
+  "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#6aaa64",
